# AppLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  NPLRuntime  README.md  build_win32.bat
cmakes/main/: CmakeLists.txt
npl_packages/AppLauncher/: CMakeLists.txt
npl_packages/AppLauncher/Texture/: dxutcontrols.dds
npl_packages/AppLauncher/script/AppLauncher/: MainWindow.html  MainWindow.lua  PageLoader.lua  main.lua
npl_packages/AppLauncher/script/AppLauncher/configs/: haqi.xml  haqi2.xml  truckstar.xml
npl_packages/AppLauncher/script/AppLauncher/lang/: AppLauncher-enUS.lua  AppLauncher-zhCN.lua  lang.lua
npl_packages/AppLauncher/script/AppLauncher/main/: ActivationDialogWindow.html  ActivationDialogWindow.lua  AppUrlProtocolHandler.lua  LoginWindow.html  LoginWindow.lua  MainWindow.html  MainWindow.lua  MainWindow0.html  MessageWindow.html  MessageWindow.lua  PageLoader.lua  TipsWindow.html  TipsWindow.lua  Translation.lua  UserInfoWindow.html  UserInfoWindow.lua  Utils.lua  main.lua
npl_packages/AppLauncher/script/AppLauncher/pages/paracraft/: paracraft.html
npl_packages/AppLauncher/script/AppLauncher/versions/: LauncherAssets.lua  LauncherVersion.lua
src/: AppLauncher.cpp  AppLauncher.h  AppLauncher.rc  CMakeLists.txt
